xml.transform fails intermittently on SKX

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 9
    • Component/s: hotspot
    • None
    • Environment:

      SKX/EVEX enabled OS's

    • b120
    • x86
    • generic

      There is a guarantee of isBit(imm8) for jccb which can sometimes fail when upper bank marshaling is required for instructions without EVEX or conditionally EVEX support, as the side effect code can push us over the imm8 limit. The effect is limited to macro assembler functions for x86.

      I already have fix for this.

      Tested as follows:

      SpecJvm2008 windows: HSW(64/32 bit): SKX(64/32 bit) : KNL (64/32 bit)
                  linux: SKX(64-bit)

      jtreg: windows: HSW(64/32 bit) , skx(64/32-bit)

            Assignee:
            Michael Berg (Inactive)
            Reporter:
            Michael Berg (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                Estimated:
                Original Estimate - 2 days
                2d
                Remaining:
                Remaining Estimate - 1 day
                1d
                Logged:
                Time Spent - Not Specified Time Not Required
                Not Specified