8154896: xml.transform fails intermittently on SKX

Replace some short branches (jccb) to avoid problem when EVEX is used.

Reviewed-by: twisti, kvn